# Pet-Robot-Control

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  local_interfaces.conf
Arduino/: Makefile  lib_requirements.txt
Arduino/lib/utilities/: DataReceiver.cpp  DataReceiver.hpp  DataSender.cpp  Module.cpp
Arduino/motor_system/: motor_system.ino
Arduino/motor_system/effectors/: LedRing.cpp  LedRing.hpp  ServoMotor.cpp  ServoMotor.hpp
Arduino/rfid_writer/: rfid_writer.ino
Arduino/sensory_system/: Module.cpp  Module.hpp  UltrasonicDistanceModule.cpp  UltrasonicDistanceModule.hpp  sensory_system.ino
Arduino/servo_referencing/: servo_referencing.ino
Arduino/utilities/: DataSender.cpp  DataSender.hpp  ModuleSyncer.cpp  ModuleSyncer.hpp
Physical Parts/: Construction_Plan.blend  Construction_Plan.blend1  lower_layer_base.gcode  lower_layer_base.stl  upper_layer_base.gcode  upper_layer_base.stl
RaspberryPi/: .dockerignore  Makefile
RaspberryPi/interfaces/c++/keyboard_demo/: CMakeLists.txt
RaspberryPi/lib/c++/json/: CMakeLists.txt
RaspberryPi/lib/c++/keyboard_input/: CMakeLists.txt
RaspberryPi/src_test/: analog_digital_converter_test.cpp  face_test.cpp  graphics_test.cpp
UtilityScripts/: motor_check.py  motor_connector.py  motor_debugger.py  mqtt_motor_injector.py  mqtt_sensor_injector.py  mqtt_test_injector.py  mqtt_test_publisher.py  mqtt_test_subscriber.py  reset_boards.py  sensor_connector.py  sensor_listener.py  uart_listener.py  uart_sender.py
deploy/: docker-compose.face_controller.yml  docker-compose.mosquitto.yml
deploy/compose_files/: docker-compose.c++_test.yml  docker-compose.cpp_test.yml  docker-compose.face_controller.yml  docker-compose.mosquitto.yml  docker-compose.python_test.yml
deploy/scripts/: arduino_deploy.sh  check_interface_state.sh  global_cpp_dependencies.sh  global_python_dependencies.sh  load_docker_images.sh  local_autostart.sh  local_build.sh  local_build_c++.sh  local_deploy.sh  local_docker_deploy.sh  local_run.sh  local_run_c++.sh  local_run_python.sh  local_setup.sh  local_stop.sh  remote_deploy.sh  remote_docker_deploy.sh  remote_setup.sh  watch_interface.sh
inc/ST7735_face_engine/: ST7735_Canvas.hpp  ST7735_Eye.hpp  ST7735_Face.hpp  ST7735_TFT_graphics.hpp  ST7735_Utils.hpp
inc/keyboard_input/: KeyInput.hpp
include/: KeyInput.hpp  ST7735_Canvas.hpp  ST7735_Eye.hpp  ST7735_Face.hpp  ST7735_TFT.h  ST7735_TFT_graphics.h  ST7735_Utils.hpp  old_keyboard.hpp
src/: .goutputstream-0QK8P1  KeyInput.cpp  ST7735_Canvas.cpp  ST7735_Eye.cpp  ST7735_Face.cpp  ST7735_TFT.cpp  ST7735_TFT_graphics.cpp  ST7735_Utils.cpp  face_test.cpp
src/ST7735_face_engine/: ST7735_Eye.cpp  ST7735_Face.cpp  ST7735_TFT_Print.cpp  ST7735_TFT_graphics.cpp
src_test/: face_test.cpp  keyboard_test.cpp
(+106 files in other folders)
